--- a/next.html
+++ b/next.html
@@ -44,7 +44,7 @@
                     </p>
                 </div>
                 <div>
-                    <a class="w-[120px] h-[80px] block mx-3" href="https://detailed-video-29b30.web.app/detailed video.mp4"><img src="download.jfif.jpg" alt=""></a>
+                    <a class="w-[120px] h-[80px] block mx-3" href="https://cdn.glitch.global/cfdab748-b145-4b28-8f85-c26ac388a3c9/cookies.mp4?v=1719846896202"><img src="download.jfif.jpg" alt=""></a>
                 </div>
                 <div>
                     <p class=" pl-3 text-[12px] font-semibold">
